--- a/Beta/styles.css
+++ b/Beta/styles.css
@@ -30,7 +30,7 @@
     max-width: 100% ;
     display: flex;
     align-items: center;
-    margin: 1em;
+    margin-left: 2em;
     font-size: 1.2rem;
   }
   .url{
