--- a/Case Study/styles.css
+++ b/Case Study/styles.css
@@ -1,10 +1,13 @@
 
  body {
-	 font-family: "Roboto", sans-serif;
+	 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	 background-color: white;
 	 color: dimgray;
 	 line-height: 1.4;
 	 font-size: 130%;
+}
+p{
+	letter-spacing: 1px;
 }
  h1, h2 {
 	 font-family: "Montserrat", sans-serif;
@@ -19,7 +22,7 @@
 	 margin: 0 auto;
 }
  header {
-	 background-color: #7fbc45;
+	 background-color: #ba67db;
 	 color: black;
 	 padding: 10vh 0;
 }
